--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,12 @@ jobs:
       # Clones the project on the machine
       - uses: actions/checkout@v4
 
+      # Sets up java 11
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+
       # Installs flutter and related dependency on this machine
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -33,3 +39,22 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
         # ^ If you want to use a specific version of flutter
+
+#      # Verifies if the dart code is formatted well
+#      - name: Verify formatting
+#        run: dart format --output=none --set-exit-if-changed .
+#        # --set-exit-if-changed stops execution if the any code is not well formatted
+#        # --output=none prints files which needs to be formatted
+#
+#      # Checks for Symantic errors. Can be configured using analysis_options.yaml
+#      - name: Analyze project source
+#        run: flutter analyze --fatal-warnings
+#        # --fatal-warnings stops execution if any warnings are found
+#
+#      # Runs unit test
+#      - name: Run tests
+#        run: flutter test
+
+      # Create android apk
+      - name: Build apk
+        run: flutter build apk
